--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="primary">#0040FF</color>
+    <color name="colorPrimary">#0040FF</color>
     <color name="primaryDark">#00297A</color>
     <color name="gray">#757575</color>
     <color name="gray_light1">#F5F5F5</color>
